--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,11 @@
-name: 'Build React App and Deploy to S3 Bucket'
-description: 'This action will build your React App and deploy it to a Amazon S3 Bucket.'
+name: 'Build React App'
+description: 'This action will build your React App.'
 author: 'Ezequiel Leites <ezequiel@leites.dev>'
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
+
 branding:
   icon: 'git-commit'
   color: 'orange'
