--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "github-react-to-s3",
+  "name": "github-react-build",
   "description": "GitHub action for build and deploy a React App to S3 Bucket.",
   "license": "MIT",
-  "repository": "https://github.com/leiteszeke/github-react-to-s3"
+  "repository": "https://github.com/leiteszeke/github-react-build"
 }
